<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sruly.stu.contacts.NewContact"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_first_name_field"
        android:hint="@string/enter_first_name_field_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_last_name_field"
        android:hint="@string/enter_last_name_field_text"/>

    <EditText
        android:id="@+id/enter_id_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_id_field_text"
        android:inputType="number" />

    <EditText
        android:id="@+id/enter_birth_year_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_birth_year_field_text"
        android:inputType="number" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_new_contact_btn"
        android:text="@string/save_new_contact_btn_text"/>

</LinearLayout>
